--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@
         </div>
     </section>
 
+    <!-- Section Pembayaran Online -->
+    <section class="payment-page" id="payment">
+        <div class="payment-container">
+            <div class="payment-content">
+                <h2 class="payment-title">Pembayaran Online</h2>
+                <p class="payment-subtitle">Jika ingin memberikan hadiah melalui transfer, dapat menggunakan rekening berikut :</p>
+                
+                <div class="bank-info">
+                    <div class="bank-logo-container">
+                        <img src="bnilogo.png" alt="Logo BNI" class="bank-logo">
+                    </div>
+                    <div class="bank-details">
+                        <p class="bank-name">Bank BNI</p>
+                        <p class="account-number">0488618953</p>
+                        <p class="account-name">Atas Nama : <span>Yulian Tenger Karisma</span></p>
+                    </div>
+                </div>
+                
+                <p class="payment-note">Terima kasih atas doa dan restu yang telah diberikan</p>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
