--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
         </div>
     </section>
 
+    <!-- Audio Background -->
+    <audio id="background-music" loop>
+        <source src="lagu.mp3" type="audio/mpeg">
+        Browser Anda tidak mendukung elemen audio.
+    </audio>
+
     <script src="script.js"></script>
 </body>
 </html>
