--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <!-- Audio Background -->
-    <audio id="background-music" loop>
+    <audio id="background-music" loop preload="auto" autoplay>
         <source src="lagu.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
