--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
+    <!-- Tombol Play Musik -->
+    <button id="music-toggle-btn" class="music-toggle-btn" aria-label="Toggle Music">
+        <span class="music-icon play-icon">▶</span>
+        <span class="music-icon pause-icon" style="display: none;">⏸</span>
+    </button>
+
     <script src="script.js" defer></script>
 </body>
 </html>
