--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     </section>
 
     <!-- Audio Background -->
-    <audio id="background-music" loop preload="metadata" autoplay muted>
-        <source src="lagu.mp3" type="audio/mpeg">
+    <audio id="background-music" loop preload="none" autoplay muted>
+        <source src="lagufix.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
